# auto-padel-tennis-overlay

./: .gitignore  .gitmessage  APP_README.md  CLAUDE.md  ELECTRON_README.md  GUIDE_UTILISATION.md  INSTALLATION.md  README.md  WORKFLOW.md  app.py  build_exe.py  main.py  overlay_generator.py  package-lock.json  package.json  pyproject.toml
.github/: setup-commit-template.sh
.github/instructions/: *.instructions.md  default.instructions.md  special_instructions.md
.github/workflows/: build.yml  release.yml  tests.yml
electron/: main.js  preload.js
renderer/: app.js  index.html  styles.css
tests/: test_main.py  test_overlay_generator.py
utils/: __init__.py  build_exe.py  overlay_generator.py
