[project]
name = "automatisation-overlay-point"
version = "0.8.0"
description = "Padel Video Overlay Generator - Application de génération automatique d'overlays de score pour vidéos de padel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pillow>=12.0",
    "pyinstaller>=6.16.0",
    "pyqt6>=6.10.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]
py-modules = ["main", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = [".", "overlay_generator.py", "main.py"]
omit = [
    "tests/*",
    "build_exe.py",
    "app.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]